// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-content-search #render should render default control no props 1`] = `
<gux-content-search>
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input type="text">
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control no props With placeholder 1`] = `
<gux-content-search>
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text">
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props 1`] = `
<gux-content-search current-match="1" match-count="10">
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Default Search Text">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-panel" title="1 of 10">
        <span aria-label="1 of 10" class="gux-navigation-result">
          1 of 10
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode 1`] = `
<gux-content-search current-match="10" match-count="10">
  <!---->
  <div class="gux-content gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="10 of 10">
        <span aria-label="10 of 10" class="gux-navigation-result gux-navigation-result-disabled">
          10 of 10
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with 1 match 1`] = `
<gux-content-search current-match="1" match-count="1">
  <!---->
  <div class="gux-content gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled with 1 match">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1 of 1">
        <span aria-label="1 of 1" class="gux-navigation-result gux-navigation-result-disabled">
          1 of 1
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with 100000000 match 1`] = `
<gux-content-search current-match="10000" match-count="100000000">
  <!---->
  <div class="gux-content gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled with big match">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="10,000 of 100,000,000">
        <span aria-label="10,000 of 100,000,000" class="gux-navigation-result gux-navigation-result-disabled">
          10,000 of 100,000,000
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with long value 1`] = `
<gux-content-search current-match="1" match-count="1">
  <!---->
  <div class="gux-content gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1 of 1">
        <span aria-label="1 of 1" class="gux-navigation-result gux-navigation-result-disabled">
          1 of 1
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with long value with 100000000 match 1`] = `
<gux-content-search current-match="1100" match-count="100000001">
  <!---->
  <div class="gux-content gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="1,100 of 100,000,001">
        <span aria-label="1,100 of 100,000,001" class="gux-navigation-result gux-navigation-result-disabled">
          1,100 of 100,000,001
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props in disable mode with no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <!---->
  <div class="gux-content gux-disabled">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input disabled="true" placeholder="Search" type="text" value="Search Disabled with no Match">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 of 0">
        <span aria-label="0 of 0" class="gux-navigation-result gux-navigation-result-disabled">
          0 of 0
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" disabled="" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with invalid  match count 1`] = `
<gux-content-search current-match="1000" match-count="abc">
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 of 0">
        <span aria-label="0 of 0" class="gux-navigation-result gux-navigation-result-disabled">
          0 of 0
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with invalid current match 1`] = `
<gux-content-search current-match="100000" match-count="100">
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-panel" title="0 of 100">
        <span aria-label="0 of 100" class="gux-navigation-result">
          0 of 100
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text 1 match 1`] = `
<gux-content-search current-match="1" match-count="1">
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-panel" title="1 of 1">
        <span aria-label="1 of 1" class="gux-navigation-result">
          1 of 1
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text 100000 match 1`] = `
<gux-content-search current-match="1000" match-count="100000">
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-panel" title="1,000 of 100,000">
        <span aria-label="1,000 of 100,000" class="gux-navigation-result">
          1,000 of 100,000
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with long text no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor sit amet, lacinia blandit ultricies lorem aliquam, dui quam a viverra vivamus pellentesque, rhoncus aliquet proin eleifend.">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 of 0">
        <span aria-label="0 of 0" class="gux-navigation-result gux-navigation-result-disabled">
          0 of 0
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with no match 1`] = `
<gux-content-search current-match="0" match-count="0">
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Default Search Text">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-disabled gux-navigation-panel" title="0 of 0">
        <span aria-label="0 of 0" class="gux-navigation-result gux-navigation-result-disabled">
          0 of 0
        </span>
        <button aria-label="Previous" class="gux-previous-button" disabled="" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" disabled="" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;

exports[`gux-content-search #render should render default control with all props with short text 100000 match 1`] = `
<gux-content-search current-match="1000" match-count="100000">
  <!---->
  <div class="gux-content">
    <div class="gux-search-icon">
      <gux-icon decorative="" iconname="ic-search"></gux-icon>
    </div>
    <input placeholder="Search" type="text" value="Lorem ipsum dolor ">
    <div class="gux-content-control-panel">
      <div class="gux-navigation-panel" title="1,000 of 100,000">
        <span aria-label="1,000 of 100,000" class="gux-navigation-result">
          1,000 of 100,000
        </span>
        <button aria-label="Previous" class="gux-previous-button" title="Previous" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-up"></gux-icon>
        </button>
        <button aria-label="Next" class="gux-next-button" title="Next" type="button">
          <gux-icon decorative="" iconname="ic-arrow-solid-down"></gux-icon>
        </button>
      </div>
      <button aria-label="Clear" class="gux-clear-button" title="Clear" type="button">
        <gux-icon decorative="" iconname="ic-close"></gux-icon>
      </button>
    </div>
  </div>
</gux-content-search>
`;
